--- a/index.html
+++ b/index.html
@@ -32,7 +32,77 @@
             <li><a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul> 
     </address>
+    <button type="button" class="header-button">
+        <svg class="header-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-burger"></use>
+        </svg>
+    </button>
     </div>
+    <div class="mob-menu">
+        <div>
+            <button type="button" class="close-button">
+                <svg class="close-button-icon" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <nav>
+                <ul class="mob-list">
+                    <li class="mob-nav">
+                        <a href="./index.html" class="mob-nav-link">Studio</a>
+                    </li>
+                    <li class="mob-nav">
+                        <a href="" class="mob-nav-link">Portfolio</a>
+                    </li>
+                    <li class="mob-nav">
+                        <a href="" class="mob-nav-link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <address class="mob-address">
+                <ul class="mob-address-list">
+                    <li class="mob-address-item">
+                        <a class="mob-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    </li>
+                    <li class="mob-address-item">
+                        <a class="mob-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                </ul>
+            </address>
+    
+            <ul class="mob-icons-list">
+                <li class="icons-item">
+                    <a class="team-icons-link" href="">
+                        <svg class="icons-image" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Ellipse-inst"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="icons-item">
+                    <a class="team-icons-link" href="">
+                        <svg class="icons-image" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Ellipse-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="icons-item">
+                    <a class="team-icons-link" href="">
+                        <svg class="icons-image" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Ellipse-face"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="icons-item">
+                    <a class="team-icons-link" href="">
+                        <svg class="icons-image" width="24" height="24">
+                            <use href="./images/icons.svg#icon-Ellipse-in"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+         </div>
+        </div>
   </header>  
   <main>
     <!-- Hero -->
@@ -96,7 +166,8 @@
              <h2 class="section-title">Our Team</h2>
             <ul class="our-team-list-list">
                 <li class="our-team-list-item">
-                    <img src="./images/img01.jpg" alt="Product Designer"
+                    <img srcset="./images/MarkGuerrero-min.jpg 1x, ./images/MarkGuerrero@2x-min.jpg 2x" class="team-img"
+                src="./images/MarkGuerrero-min.jpg" alt="Product Designer"
                     width="264"
                     height="260" />
                     <div class="team-list-item">
@@ -134,7 +205,9 @@
                 </ul>
                 </div>
                 </li>
-                <li class="our-team-list-item"> <img src="./images/img02.jpg" alt="Frontend Developer"
+                <li class="our-team-list-item"> <img srcset="./images/TomFord-min.jpg 1x, ./images/TomFord@2x-min.jpg 2x"
+                class="team-img"
+                src="./images/TomFord-min.jpg" alt="Frontend Developer"
                     width="264"
                     height="260" />
                     <div class="team-list-item">
@@ -172,7 +245,12 @@
                 </ul>
                 </div>
                 </li>
-                <li class="our-team-list-item"><img src="./images/img03.jpg" alt="Marketing"
+                <li class="our-team-list-item"><img srcset="
+                  ./images/CamilaGarcia-min.jpg   1x,
+                  ./images/CamilaGarcia@2x-min.jpg 2x
+                "
+                class="team-img"
+                src="./images/CamilaGarcia-min.jpg"src="./images/CamilaGarcia-min.jpg" alt="Marketing"
                     width="264"
                     height="260" />
                     <div class="team-list-item">
@@ -210,7 +288,11 @@
                     </ul>
                  </div>
                 </li>
-                <li class="our-team-list-item"><img src="./images/img04.jpg" alt="UI Designer"
+                <li class="our-team-list-item"><img srcset="
+                  ./images/DanielWilson-min.jpg   1x,
+                  ./images/DanielWilson@2x-min.jpg 2x
+                "
+                class="team-img"src="./images/DanielWilson-min.jpg" alt="UI Designer"
                     width="264"
                     height="260" />
                     <div class="team-list-item">
@@ -252,13 +334,26 @@
             </div>
     </section>
 <!-- Portfolio -->
+
 <section class="section-padding">
     <div class="container">
     <h2 class="section-title">Portfolio</h2>
     <ul class="portfolio-list">
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
-            <img src="./images/img05.jpg" alt="App" width="360" height="300" />
+            <picture>
+                <source srcset="./images/portfolio-desk-1-min.jpg 1x, ./images/portfolio-desk-1@2x-min.jpg 2x" media="(min-width: 1024px)" />
+                <source srcset="
+                                  ./images/portfolio-tab-1-min.jpg   1x,
+                                  ./images/portfolio-tab-1@2x-min.jpg 2x
+                                " media="(min-width: 768px)" />
+                <source srcset="
+                                  ./images/portfolio-mob-1-min.jpg    1x,
+                                  ./images/portfolio-mob-1@2x-min.jpg 2x
+                                " media="(max-width: 767px)" />
+            </picture>
+            <img srcset="./images/portfolio-desk-1-min.jpg 1x, ./images/portfolio-desk-1@2x-min.jpg 2x" class="portfolio-image" src="./images/portfolio-desk-1-min.jpg"
+                alt="bank app" width="360" />
             <p class="portfolio-overlay-text">
                 14 Stylish and User-Friendly App Design Concepts · Task
                 Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -272,7 +367,20 @@
         </li>
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
-            <img src="./images/img06.jpg" alt="Marketing" width="360" height="300" />
+            <picture>
+                <source srcset="./images/portfolio-desk-2-min.jpg 1x, ./images/portfolio-desk-2@2x-min.jpg 2x"
+                    media="(min-width: 1024px)" />
+                <source srcset="
+                                              ./images/portfolio-tab-2-min.jpg   1x,
+                                              ./images/portfolio-tab-2@2x-min.jpg 2x
+                                            " media="(min-width: 768px)" />
+                <source srcset="
+                                              ./images/portfolio-mob-2-min.jpg    1x,
+                                              ./images/portfolio-mob-2@2x-min.jpg 2x
+                                            " media="(max-width: 767px)" />
+            </picture>
+            <img srcset="./images/portfolio-desk-2-min.jpg 1x, ./images/portfolio-desk-2@2x-min.jpg 2x" class="portfolio-image"
+                src="./images/portfolio-desk-2-min.jpg" alt="bank app" width="360" />
             
             <p class="portfolio-overlay-text">
                 14 Stylish and User-Friendly App Design Concepts · Task
@@ -287,7 +395,20 @@
         </li>
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
-            <img src="./images/img07.jpg" alt="App" width="360" height="300" />
+            <picture>
+                <source srcset="./images/portfolio-desk-3-min.jpg 1x, ./images/portfolio-desk-3@2x-min.jpg 2x"
+                    media="(min-width: 1024px)" />
+                <source srcset="
+                                              ./images/portfolio-tab-3-min.jpg   1x,
+                                              ./images/portfolio-tab-3@2x-min.jpg 2x
+                                            " media="(min-width: 768px)" />
+                <source srcset="
+                                              ./images/portfolio-mob-3-min.jpg    1x,
+                                              ./images/portfolio-mob-3@2x-min.jpg 2x
+                                            " media="(max-width: 767px)" />
+            </picture>
+            <img srcset="./images/portfolio-desk-3-min.jpg 1x, ./images/portfolio-desk-3@2x-min.jpg 2x" class="portfolio-image"
+                src="./images/portfolio-desk-3-min.jpg" alt="bank app" width="360" />
              <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -301,7 +422,20 @@
         </li>
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
-            <img src="./images/img08.jpg" alt="Marketing" width="360" height="300" />
+            <picture>
+                <source srcset="./images/portfolio-desk-4-min.jpg 1x, ./images/portfolio-desk-4@2x-min.jpg 2x"
+                    media="(min-width: 1024px)" />
+                <source srcset="
+                                              ./images/portfolio-tab-4-min.jpg   1x,
+                                              ./images/portfolio-tab-4@2x-min.jpg 2x
+                                            " media="(min-width: 768px)" />
+                <source srcset="
+                                              ./images/portfolio-mob-4-min.jpg    1x,
+                                              ./images/portfolio-mob4@2x-min.jpg 2x
+                                            " media="(max-width: 767px)" />
+            </picture>
+            <img srcset="./images/portfolio-desk-4-min.jpg 1x, ./images/portfolio-desk-4@2x-min.jpg 2x" class="portfolio-image"
+                src="./images/portfolio-desk-4-min.jpg" alt="bank app" width="360" />
              <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -315,7 +449,20 @@
         </li>
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
-            <img src="./images/img09.jpg" alt="Design" width="360" height="300" />
+            <picture>
+                <source srcset="./images/portfolio-desk-5-min.jpg 1x, ./images/portfolio-desk-5@2x-min.jpg 2x"
+                    media="(min-width: 1024px)" />
+                <source srcset="
+                                              ./images/portfolio-tab-5-min.jpg   1x,
+                                              ./images/portfolio-tab-5@2x-min.jpg 2x
+                                            " media="(min-width: 768px)" />
+                <source srcset="
+                                              ./images/portfolio-mob-5-min.jpg    1x,
+                                              ./images/portfolio-mob-5@2x-min.jpg 2x
+                                            " media="(max-width: 767px)" />
+            </picture>
+            <img srcset="./images/portfolio-desk-5-min.jpg 1x, ./images/portfolio-desk-5@2x-min.jpg 2x" class="portfolio-image"
+                src="./images/portfolio-desk-5-min.jpg" alt="bank app" width="360" />
             <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -329,7 +476,20 @@
         </li>
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
-            <img src="./images/img10.jpg" alt="Marketing" width="360" height="300" />
+            <picture>
+                <source srcset="./images/portfolio-desk-6-min.jpg 1x, ./images/portfolio-desk-6@2x-min.jpg 2x"
+                    media="(min-width: 1024px)" />
+                <source srcset="
+                                              ./images/portfolio-tab-6-min.jpg   1x,
+                                              ./images/portfolio-tab-6@2x-min.jpg 2x
+                                            " media="(min-width: 768px)" />
+                <source srcset="
+                                              ./images/portfolio-mob-6-min.jpg    1x,
+                                              ./images/portfolio-mob-6@2x-min.jpg 2x
+                                            " media="(max-width: 767px)" />
+            </picture>
+            <img srcset="./images/portfolio-desk-6-min.jpg 1x, ./images/portfolio-desk-6@2x-min.jpg 2x" class="portfolio-image"
+                src="./images/portfolio-desk-6-min.jpg" alt="bank app" width="360" />
              <p class="portfolio-overlay-text">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -404,7 +564,7 @@
 </div>
 </footer>
 <!-- MODAL -->
-<div class="modal-overlay is-open">
+<div class="modal-overlay">
     <div class="modal-window">
         <button class="close-btn" type="button">
             <svg class="close-svg" width="8" height="8">
@@ -414,7 +574,7 @@
         <p class="modal-window-title">
             Leave your contacts and we will call you back
         </p>
-        <form class="modal-form">
+        <form class="modal-form" autocomplete="off">
             <div class="modal-form-user-input">
                 <label class="modal-form-label" for="user-name">Name</label>
                 <div class="modal-form-input-wrapper">
