--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 
 <section class="section-padding">
     <div class="container">
-    <h2 class="section-title">Portfolio</h2>
+    <h2 class="section-title">Our Portfolio</h2>
     <ul class="portfolio-list">
         <li class="portfolio-list-item">
             <div class="portfolio-overlay">
