--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <main>
     <!-- Hero -->
     
-    <section class="hero-section section-padding">
+    <section class="hero-section">
         <div class="container">
         <h1 class="main-title">Effective Solutions for Your Business</h1>
         <button class="order-service-btn" type="button">Order Service</button>
